update readme, different wording in desc of pkg

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 
-simple caching of mocked HTTP responses, hooking into [webmockr](https://github.com/ropensci/webmockr) 
+simple caching of HTTP requests/responses, hooking into [webmockr](https://github.com/ropensci/webmockr) 
 for the HTTP request matching
 
 ### the need
