--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 
-simple caching of HTTP requests/responses, hooking into [webmockr](https://github.com/ropensci/webmockr) 
+simple caching of HTTP requests/responses, hooking into webmockr (https://github.com/ropensci/webmockr)
 for the HTTP request matching
 
 ### the need
@@ -30,11 +30,11 @@ to HTTP requests, etc.
 
 - use `webmockr` to match requests (works with `crul` and `httr`, maybe `curl` soon)
 - possibly match on, and expire based on headers: Cache-Control, Age, Last-Modified,
-ETag, Expires (see [ruby's [faraday-http-cache](https://github.com/plataformatec/faraday-http-cache#what-gets-cached)])
+ETag, Expires (see Ruby's faraday-http-cache (https://github.com/plataformatec/faraday-http-cache#what-gets-cached))
 - caching backends: probably all binary to save disk space since most likely
 we don't need users to be able to look at plain text of caches
 - expiration: set a time to expire. if set to `2019-03-08 00:00:00` and it's
-`2019-03-07 23:00:00`, then 1 hr from now the cache will expire, and a new real HTTP 
+`2019-03-07 23:00:00`, then 1 hr from now the cache will expire, and a new real HTTP
 request will need to be made (i.e., the cache will be deleted whenever the next
 HTTP request is made)
 
@@ -88,7 +88,9 @@ x$destroy()
 * Please [report any issues or bugs](https://github.com/ropensci/webmiddens/issues).
 * License: MIT
 * Get citation information for `webmiddens` in R doing `citation(package = 'webmiddens')`
-* Please note that this project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md).
+* Please note that this project is released with a [Contributor Code of Conduct][coc].
 By participating in this project you agree to abide by its terms.
 
 [![ropensci_footer](https://ropensci.org/public_images/github_footer.png)](https://ropensci.org)
+
+[coc]: https://github.com/ropenscilabs/webmiddens/blob/master/CODE_OF_CONDUCT.md
