--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ to HTTP requests, etc.
 
 ### brainstorming
 
-- use `webmockr` to match requests (works with `crul` and `httr`, maybe `curl` soon)
+- use `webmockr` to match requests (works with `crul`; soon `httr`)
 - possibly match on, and expire based on headers: Cache-Control, Age, Last-Modified,
 ETag, Expires (see Ruby's faraday-http-cache (https://github.com/plataformatec/faraday-http-cache#what-gets-cached))
 - caching backends: probably all binary to save disk space since most likely
@@ -145,9 +145,10 @@ x$expire(reset = TRUE)
 x$expire()
 ```
 
-adfadf
+FIXME: The below not working right now - figure out why
 
-```{r}
+```{r eval=FALSE}
+wm_enable()
 con <- crul::HttpClient$new("https://httpbin.org")
 # first request is a real HTTP request
 x$r(con$get("get", query = list(stuff = "bananas")))
@@ -157,7 +158,7 @@ x$r(con$get("get", query = list(stuff = "bananas")))
 
 verbose output
 
-```{r}
+```{r eval=FALSE}
 x <- midden$new(verbose = TRUE)
 x$init(path = "rainforest")
 x$r(con$get("get", query = list(stuff = "bananas")))
@@ -165,7 +166,7 @@ x$r(con$get("get", query = list(stuff = "bananas")))
 
 set expiration time
 
-```{r}
+```{r eval=FALSE}
 x <- midden$new()
 x$init(path = "grass")
 x$expire(3)
@@ -174,13 +175,13 @@ x
 
 Delete all the files in your "midden" (the folder with cached files)
 
-```{r}
+```{r eval=FALSE}
 x$cleanup()
 ```
 
 Delete the "midden" (the folder with cached files)
 
-```{r}
+```{r eval=FALSE}
 x$destroy()
 ```
 
