--- a/README.Rmd
+++ b/README.Rmd
@@ -10,9 +10,9 @@ knitr::opts_chunk$set(
 ```
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
-[![Build Status](https://travis-ci.com/ropenscilabs/webmiddens.svg?branch=master)](https://travis-ci.com/ropenscilabs/webmiddens)
+[![Build Status](https://travis-ci.com/ropensci/webmiddens.svg?branch=master)](https://travis-ci.com/ropensci/webmiddens)
 [![Build status](https://ci.appveyor.com/api/projects/status/m0rfrp3eb285bwfd?svg=true)](https://ci.appveyor.com/project/sckott/webmiddens)
-[![codecov](https://codecov.io/gh/ropenscilabs/webmiddens/branch/master/graph/badge.svg)](https://codecov.io/gh/ropenscilabs/webmiddens)
+[![codecov](https://codecov.io/gh/ropensci/webmiddens/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/webmiddens)
 
 simple caching of HTTP requests/responses, hooking into webmockr (https://github.com/ropensci/webmockr)
 for the HTTP request matching
@@ -49,7 +49,7 @@ right now we only support `crul`, but `httr` support should arrive soon
 ### installation
 
 ```{r eval=FALSE}
-remotes::install_github("ropenscilabs/webmiddens")
+remotes::install_github("ropensci/webmiddens")
 ```
 
 ### use_midden()
@@ -195,4 +195,4 @@ By participating in this project you agree to abide by its terms.
 
 [![ropensci_footer](https://ropensci.org/public_images/github_footer.png)](https://ropensci.org)
 
-[coc]: https://github.com/ropenscilabs/webmiddens/blob/master/CODE_OF_CONDUCT.md
+[coc]: https://github.com/ropensci/webmiddens/blob/master/CODE_OF_CONDUCT.md
