--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
+[![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![Build Status](https://travis-ci.com/ropensci/webmiddens.svg?branch=master)](https://travis-ci.com/ropensci/webmiddens)
 [![Build status](https://ci.appveyor.com/api/projects/status/m0rfrp3eb285bwfd?svg=true)](https://ci.appveyor.com/project/sckott/webmiddens)
 [![codecov](https://codecov.io/gh/ropensci/webmiddens/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/webmiddens)
