--- a/README.Rmd
+++ b/README.Rmd
@@ -10,9 +10,7 @@ knitr::opts_chunk$set(
 ```
 
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
-[![Build Status](https://travis-ci.com/ropensci/webmiddens.svg?branch=master)](https://travis-ci.com/ropensci/webmiddens)
-[![Build status](https://ci.appveyor.com/api/projects/status/m0rfrp3eb285bwfd?svg=true)](https://ci.appveyor.com/project/sckott/webmiddens)
-[![codecov](https://codecov.io/gh/ropensci/webmiddens/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/webmiddens)
+[![codecov](https://codecov.io/gh/sckott/webmiddens/branch/master/graph/badge.svg)](https://codecov.io/gh/sckott/webmiddens)
 
 simple caching of HTTP requests/responses, hooking into webmockr (https://github.com/ropensci/webmockr)
 for the HTTP request matching
@@ -49,7 +47,7 @@ right now we only support `crul`, but `httr` support should arrive soon
 ### installation
 
 ```{r eval=FALSE}
-remotes::install_github("ropensci/webmiddens")
+remotes::install_github("sckott/webmiddens")
 ```
 
 ### use_midden()
@@ -187,12 +185,10 @@ x$destroy()
 
 ## Meta
 
-* Please [report any issues or bugs](https://github.com/ropensci/webmiddens/issues).
+* Please [report any issues or bugs](https://github.com/sckott/webmiddens/issues).
 * License: MIT
 * Get citation information for `webmiddens` in R doing `citation(package = 'webmiddens')`
 * Please note that this project is released with a [Contributor Code of Conduct][coc].
 By participating in this project you agree to abide by its terms.
 
-[![ropensci_footer](https://ropensci.org/public_images/github_footer.png)](https://ropensci.org)
-
-[coc]: https://github.com/ropensci/webmiddens/blob/master/CODE_OF_CONDUCT.md
+[coc]: https://github.com/sckott/webmiddens/blob/master/CODE_OF_CONDUCT.md
